<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/transparent"
            app:layout_collapseMode="pin"
            app:title="@string/app_name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/main_card_status"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="5dp">

                        <LinearLayout
                            android:id="@+id/main_card_status_overlay"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <ImageView
                                android:id="@+id/main_card_status_indicator_image"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_margin="16dp"
                                android:tint="#ffffff"
                                app:srcCompat="@drawable/ic_check_circle_black_24dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:gravity="center_vertical"
                                android:orientation="vertical"
                                android:layout_marginLeft="8dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/main_card_status_title"
                                    android:textAllCaps="false"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/main_card_status_indicator"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/main_card_status_root_true"
                                    android:textColor="#FFFFFF" />
                            </LinearLayout>

                        </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/main_card_chrome_mgr"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="5dp"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/main_card_chrome_mgr_indicator_icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp"
                            android:tint="#A5A5A5"
                            app:srcCompat="@drawable/ic_apps_black_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:layout_marginLeft="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/main_card_chrome_manager_title"
                                android:textAllCaps="false"
                                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/main_card_chrome_mgr_indicator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/main_card_chrome_manager_indicator" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/main_card_service_control"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="5dp"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/main_card_service_control_icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp"
                            android:tint="#A5A5A5"
                            app:srcCompat="@drawable/ic_developer_mode_black_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:layout_marginLeft="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/main_card_float_window"
                                android:textAllCaps="false"
                                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/main_card_service_control_indicator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/main_card_float_window_alive" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/card_boarder"
                        android:orientation="vertical"
                        android:paddingBottom="16dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/main_card_setting"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="0dp"
                            android:focusable="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_margin="16dp"
                                    android:tint="#A5A5A5"
                                    app:srcCompat="@drawable/ic_cog" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical"
                                    android:layout_marginLeft="8dp">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="1dp"
                                        android:text="@string/main_menu_1"
                                        android:textAllCaps="false"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                        android:textSize="18sp" />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView

                            android:id="@+id/main_card_help"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="0dp"
                            android:focusable="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_margin="16dp"
                                    android:tint="#A5A5A5"
                                    app:srcCompat="@drawable/ic_help_outline_black_24dp" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical"
                                    android:layout_marginLeft="8dp">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="1dp"
                                        android:text="@string/main_card_help"
                                        android:textAllCaps="false"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                        android:textSize="18sp" />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>